Played with SASS possible folder structure

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 	<title>Plaaay | Personal Playground</title>
 
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/vendor/animate.css">
+	<link rel="stylesheet" type="text/css" href="css/styles/main.css">
 </head>
 <body>
-	<nav>
-		<h1>Hello world</h1>
-	</nav>
+	<div class="home">
+		<div class="banner-wrapper">
+			<div class="banner">
+				<h1	class="animated fadeIn">Hello, jackass!</h1>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
