Added homepage message

--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
 	<title>Plaaay | Personal Playground</title>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/vendor/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/styles/main.css">
 </head>
 <body>
-	<div class="container">
-		<div class="header row">
-			<button class="button">
-				<h1>
-					<p>Hello, jackass!</p>
+	<div class="container-fluid">
+		<div class="row body">
+			<div class="text animated fadeIn text-xs-center">
+				<div class="snorlax">
+					<img src="http://data.whicdn.com/images/31875641/original.gif" alt="Snorlax" />
+				</div>
+				<h1 class="animated pulse infinite">
+					This website is hibernating...
 				</h1>
-			</button>
+				<p class="text-muted">Please shoot me an email at <a class="text-primary" href="mailto:mallari.janlester@gmail.com">mallari.janlester@gmail.com</a></p>
+			</div>
 		</div>
 	</div>
 </body>
