--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<div class="row body">
 			<div class="text animated fadeIn text-xs-center">
 				<div class="snorlax">
-					<img src="http://data.whicdn.com/images/31875641/original.gif" alt="Snorlax" />
+					<img class="img-fluid" src="http://data.whicdn.com/images/31875641/original.gif" alt="Snorlax" />
 				</div>
-				<h1 class="animated pulse infinite">
-					This website is hibernating...
+				<h1>
+					Aww! This website is hibernating...
 				</h1>
 				<p class="text-muted">Please shoot me an email at <a class="text-primary" href="mailto:mallari.janlester@gmail.com">mallari.janlester@gmail.com</a></p>
 			</div>
