Added meta tags for mobile and fixed homepage content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Plaaay | Personal Playground</title>
+  <!-- Required meta tags always come first -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/vendor/animate.css">
@@ -9,9 +13,9 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<div class="row body">
+		<div class="row body col-sm-12">
 			<div class="text animated fadeIn text-xs-center">
-				<div class="snorlax">
+				<div class="snorlax text-xs-center">
 					<img class="img-fluid" src="http://data.whicdn.com/images/31875641/original.gif" alt="Snorlax" />
 				</div>
 				<h1>
