Added some text in title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Plaaay | Personal Playground</title>
+	<title>Plaaay | Tey's Personal Playground</title>
 
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/vendor/animate.css">
