--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Plaaay | Tey's Personal Playground</title>
+	<title>Plaaay | Personal Playground</title>
 
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/vendor/animate.css">
@@ -11,7 +11,7 @@
 	<div class="home">
 		<div class="banner-wrapper">
 			<div class="banner">
-				<h1	class="animated fadeIn">Hello, jackass!</h1>
+				<h1	class="animated fadeIn">Waddup, dawg!</h1>
 			</div>
 		</div>
 	</div>
