Added local snorlax

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="row body col-sm-12">
 			<div class="text animated fadeIn text-xs-center">
 				<div class="snorlax text-xs-center">
-					<img class="img-fluid" src="http://data.whicdn.com/images/31875641/original.gif" alt="Snorlax" />
+					<img class="img-fluid" src="images/snorlax.gif" alt="Snorlax" />
 				</div>
 				<h1>
 					Aww! This website is hibernating...
